--- a/Working Codes/FRONTAL/FRONTAL.ioc
+++ b/Working Codes/FRONTAL/FRONTAL.ioc
@@ -12,7 +12,7 @@ ADC1.ContinuousConvMode=ENABLE
 CAN1.AWUM=ENABLE
 RCC.PLLCLKFreq_Value=144000000
 RCC.PLLQCLKFreq_Value=144000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM5_Init-TIM5-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true,13-MX_TIM10_Init-TIM10-false-HAL-true,14-MX_TIM11_Init-TIM11-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_TIM10_Init-TIM10-false-HAL-true
 PA11.GPIOParameters=GPIO_PuPd
 PA11.Mode=Master
 PC9.Locked=true
@@ -94,6 +94,7 @@ PH1-OSC_OUT.Mode=HSE-External-Clock-Source
 RCC.MCO2PinFreq_Value=144000000
 CAN1.Prescaler=2
 Mcu.Package=LQFP64
+PB9.Signal=GPIO_Input
 RCC.I2S2Freq_Value=48000000
 USART2.VirtualMode=VM_ASYNC
 ProjectManager.ToolChainLocation=
@@ -117,8 +118,9 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 TIM10.Prescaler=72
 ProjectManager.ProjectFileName=FRONTAL.ioc
 Dma.ADC1.0.Instance=DMA2_Stream0
+PB8.GPIOParameters=GPIO_Speed
 ADC1.Rank-0\#ChannelRegularConversion=1
-Mcu.PinsNb=16
+Mcu.PinsNb=17
 ProjectManager.NoMain=false
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,ContinuousConvMode,DMAContinuousRequests,NbrOfConversion
 CAN1.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,AWUM
@@ -130,7 +132,7 @@ ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-USART2.BaudRate=2250000
+USART2.BaudRate=115200
 RCC.FamilyName=M
 PA3.Mode=Asynchronous
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
@@ -141,6 +143,7 @@ Dma.ADC1.0.Mode=DMA_NORMAL
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 PC6.Locked=true
 RCC.I2S1Freq_Value=48000000
+PB9.Locked=true
 ProjectManager.RegisterCallBack=
 RCC.USBFreq_Value=144000000
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
@@ -152,8 +155,8 @@ TIM7.Prescaler=900
 board=custom
 RCC.VCOOutputFreq_Value=288000000
 ProjectManager.LastFirmware=true
-TIM10.Period=500
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+TIM10.Period=500
 RCC.APB2Freq_Value=36000000
 TIM7.IPParameters=Prescaler,Period
 MxCube.Version=5.4.0
@@ -167,7 +170,7 @@ SH.ADCx_IN8.ConfNb=1
 ADC1.NbrOfConversion=1
 ProjectManager.FreePins=false
 RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F446R(C-E)Tx
 RCC.PLLI2SQCLKFreq_Value=48000000
 PA2.Signal=USART2_TX
@@ -188,26 +191,28 @@ ProjectManager.CompilerOptimize=3
 PA11.Signal=CAN1_RX
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM7_VS_ClockSourceINT
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin13=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin13=VP_SYS_VS_Systick
 PC6.GPIOParameters=GPIO_Speed,PinState
-Mcu.Pin14=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:true\:true\:10\:true\:true
 ProjectManager.ComputerToolchain=false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 ADC1.NbrOfConversionFlag=1
 Mcu.Pin11=PB8
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin12=PB9
 RCC.PLLM=8
 RCC.PLLN=288
 Mcu.Pin10=PA12
-PB8.Signal=GPIO_Input
+PB8.Signal=GPIO_Output
 PA2.Mode=Asynchronous
 RCC.PWRFreq_Value=144000000
 PC8.Locked=true
 PC9.Signal=GPIO_Output
 RCC.APB1Freq_Value=36000000
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB0.Signal=ADCx_IN8
 ProjectManager.DeviceId=STM32F446RETx
 ProjectManager.LibraryCopy=1
