--- a/Working Codes/FRONTAL/FRONTAL.ioc
+++ b/Working Codes/FRONTAL/FRONTAL.ioc
@@ -38,7 +38,7 @@ NVIC.CAN1_TX_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true
 Mcu.ThirdPartyNb=0
 RCC.SDIOFreq_Value=144000000
 RCC.HCLKFreq_Value=144000000
-Mcu.IPNb=10
+Mcu.IPNb=11
 ProjectManager.PreviousToolchain=SW4STM32
 RCC.APB2TimFreq_Value=72000000
 TIM3.Period=65500
@@ -46,9 +46,9 @@ VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 RCC.SPDIFRXFreq_Value=144000000
 Mcu.Pin6=PC8
-TIM7.Period=1000
-NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+TIM7.Period=4000
 Mcu.Pin7=PC9
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 Mcu.Pin8=PA8
 Mcu.Pin9=PA11
 NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:true\:true\:4\:true\:true
@@ -57,6 +57,7 @@ Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 RCC.AHBFreq_Value=144000000
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
 Mcu.Pin0=PH0-OSC_IN
+TIM11.IPParameters=Prescaler,Period
 Mcu.Pin1=PH1-OSC_OUT
 GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PA2
@@ -70,6 +71,7 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ADC1.ScanConvMode=ENABLE
 PA8.Locked=true
+Mcu.IP10=USART2
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.24.1
 MxDb.Version=DB.5.0.40
@@ -99,6 +101,7 @@ RCC.I2S2Freq_Value=48000000
 USART2.VirtualMode=VM_ASYNC
 ProjectManager.ToolChainLocation=
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 RCC.APB2CLKDivider=RCC_HCLK_DIV4
 RCC.CECFreq_Value=32786.88524590164
 RCC.APB1TimFreq_Value=72000000
@@ -120,7 +123,7 @@ ProjectManager.ProjectFileName=FRONTAL.ioc
 Dma.ADC1.0.Instance=DMA2_Stream0
 PB8.GPIOParameters=GPIO_Speed
 ADC1.Rank-0\#ChannelRegularConversion=1
-Mcu.PinsNb=17
+Mcu.PinsNb=18
 ProjectManager.NoMain=false
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,ContinuousConvMode,DMAContinuousRequests,NbrOfConversion
 CAN1.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,AWUM
@@ -129,11 +132,13 @@ RCC.VCOI2SInputFreq_Value=500000
 PC8.Signal=GPIO_Input
 PC6.Signal=GPIO_Output
 ProjectManager.DefaultFWLocation=true
+TIM11.Prescaler=72
 ProjectManager.DeletePrevious=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 USART2.BaudRate=115200
 RCC.FamilyName=M
+VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
 PA3.Mode=Asynchronous
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 CAN1.BS2=CAN_BS2_5TQ
@@ -151,12 +156,13 @@ RCC.PLLSAIoutputFreq_Value=48000000
 PC6.PinState=GPIO_PIN_SET
 RCC.VCOI2SOutputFreq_Value=96000000
 RCC.PLLSAIPCLKFreq_Value=48000000
-TIM7.Prescaler=900
+TIM7.Prescaler=72
 board=custom
 RCC.VCOOutputFreq_Value=288000000
 ProjectManager.LastFirmware=true
+TIM11.Period=50000
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-TIM10.Period=500
+TIM10.Period=50000
 RCC.APB2Freq_Value=36000000
 TIM7.IPParameters=Prescaler,Period
 MxCube.Version=5.4.0
@@ -176,7 +182,7 @@ RCC.PLLI2SQCLKFreq_Value=48000000
 PA2.Signal=USART2_TX
 ProjectManager.UnderRoot=false
 Mcu.IP8=TIM10
-Mcu.IP9=USART2
+Mcu.IP9=TIM11
 Mcu.IP6=TIM3
 RCC.VCOSAIInputFreq_Value=500000
 Mcu.IP7=TIM7
@@ -197,8 +203,8 @@ Mcu.Pin16=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin13=VP_SYS_VS_Systick
 PC6.GPIOParameters=GPIO_Speed,PinState
 Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
-NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:true\:true\:10\:true\:true
 ProjectManager.ComputerToolchain=false
+Mcu.Pin17=VP_TIM11_VS_ClockSourceINT
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 ADC1.NbrOfConversionFlag=1
 Mcu.Pin11=PB8
