--- a/Working Codes/FRONTAL/FRONTAL.ioc
+++ b/Working Codes/FRONTAL/FRONTAL.ioc
@@ -12,7 +12,7 @@ ADC1.ContinuousConvMode=ENABLE
 CAN1.AWUM=ENABLE
 RCC.PLLCLKFreq_Value=144000000
 RCC.PLLQCLKFreq_Value=144000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_TIM10_Init-TIM10-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_TIM10_Init-TIM10-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true
 PA11.GPIOParameters=GPIO_PuPd
 PA11.Mode=Master
 PC9.Locked=true
@@ -176,7 +176,7 @@ SH.ADCx_IN8.ConfNb=1
 ADC1.NbrOfConversion=1
 ProjectManager.FreePins=false
 RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 Mcu.Name=STM32F446R(C-E)Tx
 RCC.PLLI2SQCLKFreq_Value=48000000
 PA2.Signal=USART2_TX
