--- a/Working Codes/Chimera-ECU/EngineControlUnitChimeraNoControl_2.0.ioc
+++ b/Working Codes/Chimera-ECU/EngineControlUnitChimeraNoControl_2.0.ioc
@@ -12,9 +12,9 @@ USART2.IPParameters=VirtualMode
 RCC.CortexFreq_Value=144000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F446RETx
-Mcu.PinsNb=14
+Mcu.PinsNb=16
 ProjectManager.NoMain=false
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:true\:true\:4\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:true\:true\:3\:true\:true
 CAN1.AWUM=ENABLE
 RCC.PLLCLKFreq_Value=144000000
 CAN1.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,AWUM,NART
@@ -22,7 +22,9 @@ RCC.FMPI2C1Freq_Value=36000000
 RCC.PLLQCLKFreq_Value=36000000
 RCC.VCOI2SInputFreq_Value=500000
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM6_Init-TIM6-false-HAL-true,5-MX_TIM7_Init-TIM7-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_TIM10_Init-TIM10-false-HAL-true
+PC8.Signal=GPXTI8
 TIM6.Prescaler=719
+PC6.Signal=GPIO_Output
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 PA11.Mode=Master
 ProjectManager.DefaultFWLocation=true
@@ -57,23 +59,26 @@ RCC.HCLKFreq_Value=144000000
 Mcu.IPNb=8
 ProjectManager.PreviousToolchain=SW4STM32
 RCC.APB2TimFreq_Value=72000000
+PC6.Locked=true
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
 RCC.SPDIFRXFreq_Value=144000000
 RCC.I2S1Freq_Value=48000000
 PB5.Locked=true
-Mcu.Pin6=PA11
+Mcu.Pin6=PC6
 TIM7.Period=19999
-Mcu.Pin7=PA12
-Mcu.Pin8=PB5
+Mcu.Pin7=PC8
+ProjectManager.RegisterCallBack=
+Mcu.Pin8=PA11
 RCC.USBFreq_Value=36000000
-Mcu.Pin9=PB8
-NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:true\:true\:3\:true\:true
+Mcu.Pin9=PA12
+NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:true\:true\:5\:true\:true
 RCC.VCOSAIOutputFreq_Value=96000000
 RCC.PLLSAIoutputFreq_Value=48000000
 RCC.AHBFreq_Value=144000000
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
+GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA5
@@ -110,7 +115,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 TIM6.Period=1999
 ProjectManager.FreePins=false
 RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 Mcu.Name=STM32F446R(C-E)Tx
 RCC.PLLI2SQCLKFreq_Value=48000000
 RCC.PLLI2SoutputFreq_Value=48000000
@@ -125,6 +130,8 @@ Mcu.IP7=USART2
 ProjectManager.CoupleFile=false
 PH1-OSC_OUT.Mode=HSE-External-Clock-Source
 RCC.MCO2PinFreq_Value=144000000
+PC8.GPIO_PuPd=GPIO_PULLDOWN
+PC8.GPIOParameters=GPIO_PuPd
 RCC.SYSCLKFreq_VALUE=144000000
 CAN1.Prescaler=2
 Mcu.Package=LQFP64
@@ -134,36 +141,42 @@ PA12.Mode=Master
 RCC.I2S2Freq_Value=48000000
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
+SH.GPXTI8.0=GPIO_EXTI8
 USART2.VirtualMode=VM_ASYNC
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=3
 ProjectManager.ToolChainLocation=
-PA11.Signal=CAN1_RX
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+PA11.Signal=CAN1_RX
+SH.GPXTI8.ConfNb=1
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:true\:true\:6\:true\:true
 ProjectManager.HeapSize=0x2000
+Mcu.Pin15=VP_TIM10_VS_ClockSourceINT
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin13=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM7_VS_ClockSourceINT
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.ComputerToolchain=false
 RCC.PLLQ=8
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 RCC.APB2CLKDivider=RCC_HCLK_DIV4
-Mcu.Pin11=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin12=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin11=PB8
+Mcu.Pin12=VP_SYS_VS_Systick
 RCC.PLLM=8
 RCC.PLLN=288
-Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin10=PB5
 RCC.CECFreq_Value=32786.88524590164
 RCC.APB1TimFreq_Value=72000000
 PB8.Signal=GPIO_Output
 PA2.Mode=Asynchronous
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 RCC.PWRFreq_Value=144000000
+PC8.Locked=true
 RCC.SAIBFreq_Value=48000000
 RCC.APB1Freq_Value=36000000
 TIM10.IPParameters=Prescaler,Period
 PB0.Signal=GPIO_Output
-NVIC.TIM7_IRQn=true\:0\:0\:false\:true\:true\:5\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:true\:true\:4\:true\:true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F446RETx
 ProjectManager.LibraryCopy=1
